--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   },
   "dependencies": {
     "@types/uuid": "^8.3.4",
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.22.1",
+    "sequelize-typescript": "^2.1.3",
+    "sqlite3": "^5.1.1",
     "uuid": "^9.0.0"
   }
 }
